force-app/main/default/objects/Task__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>