force-app/main/default/objects/Task__c/fields/isBlocked__c.field-meta.xml
<CustomField>
    <fullName>isBlocked__c</fullName>
    <formula>NOT(ISBLANK(LastBlockedBy__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Bloqueado?</label>
    <type>Checkbox</type>
</CustomField>