force-app/main/default/objects/Task__c/fields/LastBlockedDate__c.field-meta.xml
<CustomField>
    <fullName>LastBlockedDate__c</fullName>
    <label>Fecha de ultimo bloqueo</label>
    <type>DateTime</type>
</CustomField>