force-app/main/default/objects/Task__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>